--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: collegebaseball
 Type: Package
-Title: What the Package Does (Title Case)
+Title: A package focused on acquiring and analyzing college baseball statistics.
 Version: 0.1.0
 Author: Robert Frey
-Maintainer: The package maintainer <Robert Frey @RobertFrey40 on Twitter/X>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Maintainer: Robert Frey <rfrey22@gmail.com>
+Description: College Baseball Statistics
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Imports: 
